# nbaspa-app

./: .gitignore  Dockerfile  README.md  config.py  dev-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py  wsgi.py
.github/workflows/: test-app.yml
nbaspa_app/: __init__.py  assets.py
nbaspa_app/games/: __init__.py  calendar.py  forms.py  graph.py  routes.py  summary.py  top_moments.py
nbaspa_app/games/static/src/js/: core.js  (+3 more)
nbaspa_app/games/templates/: detail.html  game.html  game_macros.html  schedule.html
nbaspa_app/home/: routes.py
nbaspa_app/home/templates/: home.html
nbaspa_app/io/: players.py  routes.py
nbaspa_app/io/games/: routes.py  schemas.py
nbaspa_app/io/league/: routes.py  schemas.py
nbaspa_app/io/players/: routes.py  schemas.py
nbaspa_app/io/teams/: routes.py  schemas.py
nbaspa_app/league/: routes.py
nbaspa_app/league/templates/: mip.html  mvp.html  roty.html  season_home.html
nbaspa_app/players/: routes.py  summary.py
nbaspa_app/players/templates/: directory.html  mip.html  mvp.html  player_directory.html  player_layout.html  player_season_summary.html  player_summary.html  roty.html  season_home.html  top_performances.html  top_players.html
nbaspa_app/schedule/: calendar.py  routes.py
nbaspa_app/schedule/templates/: schedule.html
nbaspa_app/static/src/js/: search.js
nbaspa_app/teams/: data.py  routes.py
nbaspa_app/teams/templates/: gamelog.html  players.html  summary.html  team_layout.html  team_nav.html  teamseason.html  teamsummary.html
nbaspa_app/templates/: layout.html  not_found.html
(+21 files in other folders)
