[metadata]
name = nbaspa-app
version = attr: nbaspa_app.__version__
description = attr: nbaspa_app.__description__
long_description = file: README.md
python_requires = 
    >=3.8
license = MIT license
classifiers = 
    Framework :: Flask
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires = 
    Click>=7.1.2,<=8.0.1
    Flask==2.0.1
    Flask-Assets==2.0
    flask-smorest==0.35.0
    gunicorn==20.1.0
    Jinja2==3.0.1
    nbaspa@git+https://github.com/ak-gupta/nbaspa.git@v0.1.1

[options.extras_require]
docs = 
    sphinx
    furo
qa = 
    black
    flake8
    mypy
    pip-tools
tests = 
    pytest
    pytest-cov

[bumpver]
current_version = "2021.10.0"
version_pattern = "YYYY.MM.INC0"
commit_message = "Bump version to {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg = 
    current_version = "{version}"
nbaspa_app/__init__.py = 
    __version__ = "{version}"
